--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
 
      <div class="report">
-       <p>Made by Ravi,Nirmal,Deepak</p>
+       <p>Made by shivasathvik,srikanth,bhargav reddy</p>
        
      </div>
 
